Implementing a bunch of TS/JS ToDo items.

--- a/javascript/Vanilla JS Syntax.ipynb
+++ b/javascript/Vanilla JS Syntax.ipynb
@@ -456,9 +456,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81f80124",
+   "metadata": {},
+   "source": [
+    "# readonly\n",
+    "\n",
+    "`readonly` in classes/interfaces is a TS feature.  It emits nothing in JS, but helps the TS compiler keep you from modifying the property."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f714a3a",
+   "id": "69bf2ede",
    "metadata": {},
    "outputs": [],
    "source": []
