--- a/typescript/Collections.ipynb
+++ b/typescript/Collections.ipynb
@@ -817,9 +817,123 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ab05a812",
+   "metadata": {},
+   "source": [
+    "# Reification\n",
+    "\n",
+    "Adding an item to an index position in an array that doesn't exist automatically adds `undefined` entries in between to make it work.\n",
+    "\n",
+    "You can also do this `const a = [1, 2, , , , 5];` to achieve a similar effect.\n",
+    "\n",
+    "NOTE: JS stores arrays like this __sparsely__."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0436443c",
+   "metadata": {},
+   "source": [
+    "# Stack, Queue, Deque\n",
+    "\n",
+    "You can use an __array__ as a stack, queue, or deque, but it's worth noting that it will only behave efficiently for a stack.\n",
+    "\n",
+    "For pushing and popping, JS arrays are designed to be about O(1), but for shifting and unshifting (similar to Java's `ArrayList`, they are as inefficient as you'd expect for those operations.  To get a better queue or deque, you need to implement your own or `npm install` a 3rd party package such as `deque`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ab2c8320",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ts-files/deque.ts\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ts-files/deque.ts\n",
+    "\n",
+    "const stack: number[] = [];\n",
+    "stack.push(1);\n",
+    "stack.push(2);\n",
+    "stack.push(3);\n",
+    "stack.push(4, 5, 6);\n",
+    "console.log(stack);\n",
+    "console.log(stack.pop());\n",
+    "\n",
+    "const queue: number[] = [];\n",
+    "queue.unshift(1);\n",
+    "queue.unshift(2);\n",
+    "queue.unshift(3);\n",
+    "queue.unshift(4, 5, 6); // opposite of what you might expect\n",
+    "console.log(queue);\n",
+    "console.log(queue.shift());\n",
+    "\n",
+    "const queue2: number[] = [];\n",
+    "queue2.push(1, 2, 3, 4, 5, 6); // more intuitive than the unshift version\n",
+    "console.log(queue2);\n",
+    "console.log(queue2.shift());\n",
+    "\n",
+    "const stack2: number[] = [];\n",
+    "console.log(stack2.pop());"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d5f1b446",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m3\u001b[39m, \u001b[33m4\u001b[39m, \u001b[33m5\u001b[39m, \u001b[33m6\u001b[39m ]\r\n",
+      "\u001b[33m6\u001b[39m\r\n",
+      "[ \u001b[33m4\u001b[39m, \u001b[33m5\u001b[39m, \u001b[33m6\u001b[39m, \u001b[33m3\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m1\u001b[39m ]\r\n",
+      "\u001b[33m4\u001b[39m\r\n",
+      "[ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m3\u001b[39m, \u001b[33m4\u001b[39m, \u001b[33m5\u001b[39m, \u001b[33m6\u001b[39m ]\r\n",
+      "\u001b[33m1\u001b[39m\r\n",
+      "\u001b[90mundefined\u001b[39m\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ts-node ts-files/deque.ts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59b5928c",
+   "metadata": {},
+   "source": [
+    "# Negative Indices\n",
+    "\n",
+    "No (unlike Python)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cccae55",
+   "metadata": {},
+   "source": [
+    "# WeakMap and WeakSet\n",
+    "\n",
+    "These act like `Map` and `Set` but they hold __weak references to their keys__ (do not prevent garbage collection).  When a key is garbage collected, it is automatically removed from these structures.\n",
+    "\n",
+    "As a result of the dynamic nature of membership, you are not allowed to enumerate or get the size of these structures."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e28825d5",
+   "id": "8a326d28",
    "metadata": {},
    "outputs": [],
    "source": []
