--- a/typescript/Functions.ipynb
+++ b/typescript/Functions.ipynb
@@ -1004,6 +1004,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "45117f0c",
+   "metadata": {},
+   "source": [
+    "# some() and every()\n",
+    "\n",
+    "These are equivalent to the usual __any__ and __all__ functional operators (on arrays)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3fb68829",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n",
+      "false\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  const numbers = [1, 2, 3, 4, 5];\n",
+    "\n",
+    "  console.log(numbers.some(n => n % 2 == 0)); // true because some even numbers\n",
+    "  console.log(numbers.every(n => n % 2 == 0)); // false because not all are event\n",
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "96f57ccd",
    "metadata": {},
    "source": [
@@ -1187,13 +1231,161 @@
     "  // This is how you have to do it.\n",
     "  const g = () => ({ x: 5 });\n",
     "  console.log(g()); // Output: { x: 5 }\n",
-    "})();\n"
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d96a56c4",
+   "metadata": {},
+   "source": [
+    "# Method References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e58fcac3",
+   "metadata": {},
+   "source": [
+    "## Bound vs. Unbound\n",
+    "\n",
+    "Unlike in Python, `instance.greet` and `MyClass.greet` are the same thing (unbound).  You have to call `greet.bind(instance)` to make it bound.  The difference is because JavaScript differentiates static vs. instance methods only by binding of `this`, rather than via a secretly passed `self` parameter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "dc0532ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, my name is undefined\n",
+      "Hello, my name is Alice\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    class MyClass {\n",
+    "        constructor(public name: string) {}\n",
+    "\n",
+    "        greet() {\n",
+    "            console.log(`Hello, my name is ${this.name}`);\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    const instance = new MyClass(\"Alice\");\n",
+    "    const unboundGreet = instance.greet;\n",
+    "    unboundGreet(); // `this` will be undefined or the global object\n",
+    "\n",
+    "    const boundGreet = instance.greet.bind(instance);\n",
+    "    boundGreet(); // `this` will correctly reference the instance\n",
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac455076",
+   "metadata": {},
+   "source": [
+    "## Assigning to Lambda Variables\n",
+    "\n",
+    "Whether bound or unbound, the type of the method when assigned to a variable is the same (fully equivalent to a lambda, function expression, or regular function).  The fact that `this` is an instance is not part of the type of the function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b25f0267",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, my name is Alice\n",
+      "Hello, my name is Alice\n",
+      "Hello, my name is Bob\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    class MyClass {\n",
+    "        constructor(public name: string) {}\n",
+    "\n",
+    "        greet() {\n",
+    "            console.log(`Hello, my name is ${this.name}`);\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    const instance = new MyClass(\"Alice\");\n",
+    "\n",
+    "    // Assigning an unbound method to a lambda\n",
+    "    const lambdaGreet: () => void = () => instance.greet();\n",
+    "    const lambdaGreet2: () => void = instance.greet.bind(instance);\n",
+    "\n",
+    "    lambdaGreet(); // Works correctly because it calls the method on the instance\n",
+    "    lambdaGreet2();\n",
+    "    \n",
+    "    // Using arrow function in class property\n",
+    "    class MyClassWithArrow {\n",
+    "        name: string;\n",
+    "\n",
+    "        constructor(name: string) {\n",
+    "            this.name = name;\n",
+    "        }\n",
+    "\n",
+    "        greet = () => {\n",
+    "            console.log(`Hello, my name is ${this.name}`);\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    const newInstance = new MyClassWithArrow(\"Bob\");\n",
+    "    const newGreet = newInstance.greet;\n",
+    "    newGreet(); // Works correctly because of arrow function's lexical binding of `this`\n",
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2275b02",
+   "metadata": {},
+   "source": [
+    "# Lazy Sequences\n",
+    "\n",
+    "There is no built-in `itertools` like functionality in JS or TS.  You can use __generators__ and yield values in generators based on values in other generators.  The fact that it's yielding would stop the for loop from being eager.\n",
+    "\n",
+    "3rd party options include `rxjs` and `lodash`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84394138",
+   "id": "7a2e5ca7",
    "metadata": {},
    "outputs": [],
    "source": []
