--- a/typescript/Strings and Printing.ipynb
+++ b/typescript/Strings and Printing.ipynb
@@ -709,9 +709,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2cfceec3",
+   "metadata": {},
+   "source": [
+    "# Join\n",
+    "\n",
+    "Join is a method of arrays instead of strings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1c304f08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1,2,3,4,5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    const a = [1, 2, 3, 4, 5];\n",
+    "    console.log(a.join(','));\n",
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05f18ebe",
+   "metadata": {},
+   "source": [
+    "# Java StringBuilder\n",
+    "\n",
+    "There is no such concept here.  You can use something like `Array.join()` as mentioned above."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87b65c02",
+   "id": "2560474a",
    "metadata": {},
    "outputs": [],
    "source": []
