--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -1601,9 +1601,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "08f2aae8",
+   "metadata": {},
+   "source": [
+    "# var\n",
+    "\n",
+    "`var` is the old-fashioned JavaScript variable declaration keyword, which has been replaced by `let` and `const`.  However, you still see it in old code and should know how it works.  Just don't use it in new code as it is __highly discouarged__.  TypeScript lets you use it.\n",
+    "\n",
+    "`var` is like `let` but with the following differences:\n",
+    "  - the variable is declared in __function scope__ instead of lexical scope\n",
+    "    - like python\n",
+    "    - meaning you can set it in a conditional block and read it from outside the block\n",
+    "  - you can read it (with value undefined) in a function before you even declare it\n",
+    "    - this is called __hoisting__\n",
+    "  - if defined at the global level, it is automaticaly added to the `window` object\n",
+    "    - this does not happen for `let` or `const`\n",
+    "  - you can __redeclare__ the same variable with another `var`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "47187a0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 10\n",
+      "undefined\n",
+      "100\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  var x: number = 5;\n",
+    "  var y = 10;\n",
+    "  \n",
+    "  console.log(x, y);\n",
+    "  \n",
+    "  console.log(z);\n",
+    "  if (x == 5) {\n",
+    "      var z = 100;\n",
+    "  }\n",
+    "  console.log(z);\n",
+    "  \n",
+    "  var z = 100;\n",
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc34d65d",
+   "metadata": {},
+   "source": [
+    "# Empty Array Type Inference\n",
+    "\n",
+    "`const a = [];` is a compile error because nothing to infer based on.\n",
+    "\n",
+    "`const a: number[] = [];` fixes it."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5591436",
+   "id": "328ee4c9",
    "metadata": {},
    "outputs": [],
    "source": []
