More ToDo items for TS.

--- a/typescript/Collections.ipynb
+++ b/typescript/Collections.ipynb
@@ -931,9 +931,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eb6e2272",
+   "metadata": {},
+   "source": [
+    "# Data Structures Missing from JS/TS: (either make your own or use 3rd party library)\n",
+    "\n",
+    "  - efficient queue and deque\n",
+    "    - 3rd party libraries: double-ended-queue, typescript-collections, collections (js)\n",
+    "  - prioroity queue/heap\n",
+    "    - 3rd party libraries: heap, typescript-collections, collections (js)\n",
+    "  - sorted map and set\n",
+    "    - 3rd party libraries: typescript-collections, collections (js)\n",
+    "  - linked list\n",
+    "    - 3rd party libraries: typescript-collections, collections (js)\n",
+    "  - trie\n",
+    "    - no major language seems to have this - just get used to making your own (it's simple)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a326d28",
+   "id": "000c4f96",
    "metadata": {},
    "outputs": [],
    "source": []
