--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -545,6 +545,8 @@
     " \n",
     " Use `JSON.stringify` to turn an object into a string.  You can control pretty printing delimitters with the 3rd parameter.\n",
     " \n",
+    " You can select properties with the 2nd parameter, or pass null to include all properties.\n",
+    " \n",
     " Use `JSON.parse` to get an object from a string.\n",
     " \n",
     " `JSON` is built-into __JavaScript__ itself."
@@ -552,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "7c008649",
    "metadata": {},
    "outputs": [
@@ -571,6 +573,10 @@
       "   \"b\": 2,\n",
       "   \"c\": 3\n",
       "}\n",
+      "{\n",
+      " \"b\": 2,\n",
+      " \"a\": 1\n",
+      "}\n",
       "{ a: 1, b: 2, c: 3 }\n"
      ]
     },
@@ -580,7 +586,7 @@
        "undefined"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,6 +603,9 @@
     "    \n",
     "    const s3 = JSON.stringify(o, null, 3);\n",
     "    console.log(s3);\n",
+    "    \n",
+    "    const s4 = JSON.stringify(o, ['b', 'a'], ' ');\n",
+    "    console.log(s4);\n",
     "    \n",
     "    const o2 = JSON.parse(s2);\n",
     "    console.log(o2);\n",
@@ -697,6 +706,11 @@
     "    replace(url: string) to navigate to another page without adding a back button entry\n",
     "    assign(url: string) to navigate to another page with a back button entry\n",
     "      you can also change location.href and do location.reload()\n",
+    "      \n",
+    "    if you change 'href', it will navigate to the new page after the current code finishes\n",
+    "      you can do reload() to do it right away - then no more of your code will execute\n",
+    "      if you do setTimeout(), your handler might run if the delay is short (or might not)\n",
+    "      all your code is cleared out when the new page is up\n",
     "```"
    ]
   },
@@ -723,9 +737,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6bf8f6b0",
+   "metadata": {},
+   "source": [
+    "# localStorage\n",
+    "\n",
+    "`localStorage` can keep data on the local system __per origin__ (the parts of the url not including pages, including protocol, domain, subdomains, port).\n",
+    "\n",
+    "It is kept until explicitly cleared.\n",
+    "\n",
+    "```TypeScript\n",
+    "// Store data\n",
+    "localStorage.setItem('key', 'value');\n",
+    "\n",
+    "// Retrieve data\n",
+    "let data = localStorage.getItem('key'); // returns 'value'\n",
+    "\n",
+    "// Remove data\n",
+    "localStorage.removeItem('key');\n",
+    "\n",
+    "// Clear all data for the domain\n",
+    "localStorage.clear();\n",
+    "```\n",
+    "\n",
+    "There is a 5 MB limit for the origin, and future attempts to add data will throw exceptions if exceeded."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c284f632",
+   "metadata": {},
+   "source": [
+    "# Cookies"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b27154d9",
+   "metadata": {},
+   "source": [
+    "`document.cookie` represents the cookie for the current __origin__ (see `localStorage` above for definition).  If you set it, it will persist and be sent automatically in all requests in the future, including page loads, ajax requests, etc.  It is a string with a certain format for fields inside.\n",
+    "\n",
+    "```TypeScript\n",
+    "// Creating a cookie that expires in 7 days\n",
+    "const now = new Date();\n",
+    "now.setTime(now.getTime() + (7 * 24 * 60 * 60 * 1000)); // 7 days in milliseconds\n",
+    "const expires = \"expires=\" + now.toUTCString();\n",
+    "document.cookie = \"username=John Doe; \" + expires + \"; path=/\";\n",
+    "\n",
+    "function getCookie(name) {\n",
+    "    const cookieArr = document.cookie.split(';');\n",
+    "    for (let i = 0; i < cookieArr.length; i++) {\n",
+    "        let cookiePair = cookieArr[i].split('=');\n",
+    "        if (name === cookiePair[0].trim()) {\n",
+    "            return decodeURIComponent(cookiePair[1]);\n",
+    "        }\n",
+    "    }\n",
+    "    return null;\n",
+    "}\n",
+    "\n",
+    "const username = getCookie(\"username\");\n",
+    "console.log(username); // Outputs the value of the 'username' cookie, if it exists\n",
+    "\n",
+    "// Deleting a cookie by setting its expiration to a past date\n",
+    "document.cookie = \"username=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;\";\n",
+    "\n",
+    "// Secure cookie (only transmitted over HTTPS)\n",
+    "document.cookie = \"username=John Doe; secure; path=/\";\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5412a282",
+   "id": "09f97a81",
    "metadata": {},
    "outputs": [],
    "source": []
