--- a/typescript/Functions.ipynb
+++ b/typescript/Functions.ipynb
@@ -1383,9 +1383,96 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "696d4b50",
+   "metadata": {},
+   "source": [
+    "# Recursive Lambdas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "62484a9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "\n",
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    const f = (a: number) => {\n",
+    "        console.log(a);\n",
+    "        if (a == 0) {\n",
+    "            return;\n",
+    "        }\n",
+    "        f(a - 1);\n",
+    "    };\n",
+    "    f(10);\n",
+    "    console.log();\n",
+    "    \n",
+    "    const g = function(a: number) {\n",
+    "        console.log(a);\n",
+    "        if (a == 0) {\n",
+    "            return;\n",
+    "        }\n",
+    "        g(a - 1);\n",
+    "    };\n",
+    "    g(10);\n",
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54317825",
+   "metadata": {},
+   "source": [
+    "# Recursion in General\n",
+    "\n",
+    "Works just like other languages - you call the function itself from inside the function.  No TCO."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a2e5ca7",
+   "id": "c8b5789e",
    "metadata": {},
    "outputs": [],
    "source": []
