Clarification(s) about statics in TS/JS.

--- a/typescript/Classes.ipynb
+++ b/typescript/Classes.ipynb
@@ -2982,7 +2982,7 @@
     "\n",
     "__Interfaces__ and __type literals__ don't interact with `this` because they don't have function bodies in them.  it is only a matter for __classes__ and __anonymous objects__.\n",
     "\n",
-    "Inside a __class__, `this` is the class instance (shadowing the global object). This is the case for all 3 ways of defining functions.  It is also the case for lambdas inside class methods, which is useful for returning those to be called elsewhere.  Note that by definition, `static` methods don't bind `this` to the class instance.\n",
+    "Inside a __class__, `this` is the class instance (shadowing the global object). This is the case for all 3 ways of defining functions.  It is also the case for lambdas inside class methods, which is useful for returning those to be called elsewhere.  Note that by definition, `static` methods don't bind `this` to the class instance.  They bind to the class itself instead.\n",
     "\n",
     "Inside an __anonymous object__, it depends on the type of function. A lambda (arrow function) takes `this` from the surrounding scope (eg. the class containing the anonymous object, or the global object otherwise).  A method or function expression sets `this` to the anonymous object itself, making it act as a true method of the anonymous object as a class instance of its own.\n",
     "\n",
@@ -3861,9 +3861,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7edd6ac5",
+   "metadata": {},
+   "source": [
+    "# Static Members and 'this'\n",
+    "\n",
+    "  - Unique to JavaScript, it is illegal to directly call a static method from an instance, or to reference a static variable.\n",
+    "  - When it comes to `this`, JS follows the Python classmethod pattern instead of static method.  The class itself is passed in as `this`.\n",
+    "  - It is illegal to reference an instance member using the class, even if you use `bind` before calling it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c6b631ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m.g(): instance\n",
+      "MyClass.f(): class\n",
+      "m.g.bind(m): instance\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    class MyClass {\n",
+    "        static name1 = 'class';\n",
+    "        name2 = 'instance';\n",
+    "        \n",
+    "        static f() {\n",
+    "            return this.name1;\n",
+    "        }\n",
+    "\n",
+    "        g() {\n",
+    "            return this.name2;\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    const m = new MyClass();\n",
+    "    \n",
+    "    // console.log(m.f()); // ILLEGAL\n",
+    "    console.log('m.g(): ' + m.g()); // instance\n",
+    "    console.log('MyClass.f(): ' + MyClass.f()); // class\n",
+    "    // console.log(MyClass.g()); // ILLEGAL\n",
+    "    // console.log(MyClass.g.bind(m)); // ILLEGAL\n",
+    "    console.log('m.g.bind(m): ' + m.g.bind(m)()); // instance\n",
+    "    \n",
+    "    // console.log(m.name1); // ILLEGAL\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d608c23",
+   "id": "87904038",
    "metadata": {},
    "outputs": [],
    "source": []
