--- a/typescript/Functions.ipynb
+++ b/typescript/Functions.ipynb
@@ -1249,12 +1249,18 @@
    "source": [
     "## Bound vs. Unbound\n",
     "\n",
-    "Unlike in Python, `instance.greet` and `MyClass.greet` are the same thing (unbound).  You have to call `greet.bind(instance)` to make it bound.  The difference is because JavaScript differentiates static vs. instance methods only by binding of `this`, rather than via a secretly passed `self` parameter."
+    "JS is a little unusual compared to other languages in this regard.\n",
+    "\n",
+    "`instance.greet` gives you an __unbound__ reference to an instance method.  If you don't bind it with `bind()`, then `this` will not be bound to the instance. (eg. will be global or whatever it would have been previously)\n",
+    "\n",
+    "`MyClass.greet` gives you an __bound__ reference to a static method.  If you don't bind it with `bind()`, it will also be the global (or whatever), but you are expected to bind it to the __class itself__.\n",
+    "\n",
+    "Static and instance methods aren't interchangeable the way they would be, for instance, in Python."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "dc0532ef",
    "metadata": {},
    "outputs": [
@@ -1263,7 +1269,135 @@
      "output_type": "stream",
      "text": [
       "Hello, my name is undefined\n",
-      "Hello, my name is Alice\n"
+      "Hello, my name is Alice\n",
+      "<ref *1> Object [global] {\n",
+      "  global: [Circular *1],\n",
+      "  queueMicrotask: [Function: queueMicrotask],\n",
+      "  clearImmediate: [Function: clearImmediate],\n",
+      "  setImmediate: [Function: setImmediate] {\n",
+      "    [Symbol(nodejs.util.promisify.custom)]: [Getter]\n",
+      "  },\n",
+      "  structuredClone: [Getter/Setter],\n",
+      "  clearInterval: [Function: clearInterval],\n",
+      "  clearTimeout: [Function: clearTimeout],\n",
+      "  setInterval: [Function: setInterval],\n",
+      "  setTimeout: [Function: setTimeout] {\n",
+      "    [Symbol(nodejs.util.promisify.custom)]: [Getter]\n",
+      "  },\n",
+      "  atob: [Getter/Setter],\n",
+      "  btoa: [Getter/Setter],\n",
+      "  performance: [Getter/Setter],\n",
+      "  fetch: [AsyncFunction: fetch],\n",
+      "  crypto: [Getter],\n",
+      "  __filename: '[eval]',\n",
+      "  module: <ref *2> [Function: Module] {\n",
+      "    _cache: [Object: null prototype] {},\n",
+      "    _pathCache: [Object: null prototype] {},\n",
+      "    _extensions: [Object: null prototype] {\n",
+      "      '.js': [Function (anonymous)],\n",
+      "      '.json': [Function (anonymous)],\n",
+      "      '.node': [Function (anonymous)]\n",
+      "    },\n",
+      "    globalPaths: [\n",
+      "      '/Users/davidpetrofsky/.node_modules',\n",
+      "      '/Users/davidpetrofsky/.node_libraries',\n",
+      "      '/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node'\n",
+      "    ],\n",
+      "    _debug: [Function: deprecated],\n",
+      "    isBuiltin: [Function: isBuiltin],\n",
+      "    _findPath: [Function (anonymous)],\n",
+      "    _nodeModulePaths: [Function (anonymous)],\n",
+      "    _resolveLookupPaths: [Function (anonymous)],\n",
+      "    _load: [Function (anonymous)],\n",
+      "    _resolveFilename: [Function (anonymous)],\n",
+      "    createRequire: [Function: createRequire],\n",
+      "    _initPaths: [Function (anonymous)],\n",
+      "    _preloadModules: [Function (anonymous)],\n",
+      "    syncBuiltinESMExports: [Function: syncBuiltinESMExports],\n",
+      "    Module: [Circular *2],\n",
+      "    builtinModules: [\n",
+      "      '_http_agent',         '_http_client',        '_http_common',\n",
+      "      '_http_incoming',      '_http_outgoing',      '_http_server',\n",
+      "      '_stream_duplex',      '_stream_passthrough', '_stream_readable',\n",
+      "      '_stream_transform',   '_stream_wrap',        '_stream_writable',\n",
+      "      '_tls_common',         '_tls_wrap',           'assert',\n",
+      "      'assert/strict',       'async_hooks',         'buffer',\n",
+      "      'child_process',       'cluster',             'console',\n",
+      "      'constants',           'crypto',              'dgram',\n",
+      "      'diagnostics_channel', 'dns',                 'dns/promises',\n",
+      "      'domain',              'events',              'fs',\n",
+      "      'fs/promises',         'http',                'http2',\n",
+      "      'https',               'inspector',           'inspector/promises',\n",
+      "      'module',              'net',                 'os',\n",
+      "      'path',                'path/posix',          'path/win32',\n",
+      "      'perf_hooks',          'process',             'punycode',\n",
+      "      'querystring',         'readline',            'readline/promises',\n",
+      "      'repl',                'stream',              'stream/consumers',\n",
+      "      'stream/promises',     'stream/web',          'string_decoder',\n",
+      "      'sys',                 'timers',              'timers/promises',\n",
+      "      'tls',                 'trace_events',        'tty',\n",
+      "      'url',                 'util',                'util/types',\n",
+      "      'v8',                  'vm',                  'wasi',\n",
+      "      'worker_threads',      'zlib'\n",
+      "    ],\n",
+      "    runMain: [Function: executeUserEntryPoint],\n",
+      "    findSourceMap: [Function: findSourceMap],\n",
+      "    SourceMap: [class SourceMap]\n",
+      "  },\n",
+      "  exports: {},\n",
+      "  __dirname: '.',\n",
+      "  require: [Function: require] {\n",
+      "    resolve: [Function: resolve] { paths: [Function: paths] },\n",
+      "    main: undefined,\n",
+      "    extensions: [Object: null prototype] {\n",
+      "      '.js': [Function (anonymous)],\n",
+      "      '.json': [Function (anonymous)],\n",
+      "      '.node': [Function (anonymous)]\n",
+      "    },\n",
+      "    cache: [Object: null prototype] {}\n",
+      "  },\n",
+      "  '$$mimer$$': [Function: defaultMimer],\n",
+      "  '$$done$$': [Function: bound bound done],\n",
+      "  console: Console [console] {\n",
+      "    log: [Function: log],\n",
+      "    warn: [Function: warn],\n",
+      "    dir: [Function: dir],\n",
+      "    time: [Function: time],\n",
+      "    timeEnd: [Function: timeEnd],\n",
+      "    timeLog: [Function: timeLog],\n",
+      "    trace: [Function: trace],\n",
+      "    assert: [Function: assert],\n",
+      "    clear: [Function: clear],\n",
+      "    count: [Function: count],\n",
+      "    countReset: [Function: countReset],\n",
+      "    group: [Function: group],\n",
+      "    groupEnd: [Function: groupEnd],\n",
+      "    table: [Function: table],\n",
+      "    debug: [Function: debug],\n",
+      "    info: [Function: info],\n",
+      "    dirxml: [Function: dirxml],\n",
+      "    error: [Function: error],\n",
+      "    groupCollapsed: [Function: groupCollapsed],\n",
+      "    Console: [Function: Console]\n",
+      "  },\n",
+      "  '$$': [Object: null prototype] {\n",
+      "    async: [Function: bound async],\n",
+      "    done: [Function: bound done],\n",
+      "    sendResult: [Function: bound ],\n",
+      "    sendError: [Function: bound ],\n",
+      "    mime: [Function: bound ],\n",
+      "    text: [Function: bound ],\n",
+      "    html: [Function: bound ],\n",
+      "    svg: [Function: bound ],\n",
+      "    png: [Function: bound ],\n",
+      "    jpeg: [Function: bound ],\n",
+      "    json: [Function: bound ],\n",
+      "    input: [Function: bound input],\n",
+      "    display: [Function: bound createDisplay],\n",
+      "    clear: [Function: bound clear]\n",
+      "  }\n",
+      "}\n",
+      "[Function: MyClass] { sgreet: [Function (anonymous)] }\n"
      ]
     },
     {
@@ -1272,7 +1406,7 @@
        "undefined"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,6 +1419,10 @@
     "        greet() {\n",
     "            console.log(`Hello, my name is ${this.name}`);\n",
     "        }\n",
+    "        \n",
+    "        static sgreet() {\n",
+    "            console.log(this);\n",
+    "        }\n",
     "    }\n",
     "\n",
     "    const instance = new MyClass(\"Alice\");\n",
@@ -1293,6 +1431,12 @@
     "\n",
     "    const boundGreet = instance.greet.bind(instance);\n",
     "    boundGreet(); // `this` will correctly reference the instance\n",
+    "    \n",
+    "    const unboundSGreet = MyClass.sgreet;\n",
+    "    unboundSGreet();\n",
+    "    \n",
+    "    const boundSGreet = unboundSGreet.bind(MyClass);\n",
+    "    boundSGreet();\n",
     "})();"
    ]
   },
@@ -1472,7 +1616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8b5789e",
+   "id": "5a5e2b48",
    "metadata": {},
    "outputs": [],
    "source": []
