Adding notes from reserach into prototypes.

--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -716,6 +716,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "17cd66ae",
+   "metadata": {},
+   "source": [
+    "# DOM Loading Events\n",
+    "\n",
+    "- `document` has `DOMContentLoaded` event that fires when the HTML structure (DOM) is in-place, but before styles, etc. are loaded\n",
+    "  - you can use that to guard operations that shouldn't happen until the DOM is fully loaded\n",
+    "    - or to modify the DOM once it's there\n",
+    "- `window` has `load` event that fires when everything is fully loaded after that\n",
+    "  - you can use that to guard operations that need all the styles, etc. to be there\n",
+    "- other event handlers like click handlers, etc. could potentially fire before those events fire\n",
+    "  - eg. the browser is showing part of the DOM before it's loaded, and it has a button the user clicks\n",
+    "  - you could prevent that by setting your event listeners in the handler for `DOMContentLoaded` or something similar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4e184cec",
    "metadata": {},
    "source": [
