--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -1676,9 +1676,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "54480706",
+   "metadata": {},
+   "source": [
+    "# 'any' as a JS bypass\n",
+    "\n",
+    "TS will not prevent any property reads or writes on an `any` type object, so it's a way to get JS behavior in TS when needed (such as when examining how JS concepts work, within one of these notebooks)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "328ee4c9",
+   "id": "5422c204",
    "metadata": {},
    "outputs": [],
    "source": []
